scss/style.scss
@import 'fonts';
@import 'mixins';
@import 'variables';



.nojs {
	font-size    : 2rem;
	margin       : 10px;
	text-align   : center;
	background   : linear-gradient(rgb(238, 115, 0), rgb(236, 171, 73));
	border-radius: 1pc;

	&>:not(:first-child) {
		display: none !important;
	}
}

html {
	height    : 100%;
	box-sizing: border-box;

	font-family: "Barlow Semi Condensed", sans-serif;
	font-weight: 600;
}

body {
	align-items   : center;
	height        : 100%;
	background    : linear-gradient($backgroud-gradient);
	display       : flex;
	margin        : 0;
	flex-direction: column;

	@media (min-width:600px) {
		background: radial-gradient($backgroud-gradient);
	}
}

header {
	width    : 90%;
	max-width: 700px;

	display        : flex;
	flex-direction : row;
	justify-content: space-between;
	align-items    : center;

	margin       : min(4vw, 20px);
	padding      : min(4vw, 20px);
	border       : 3px solid hsl(217, 16%, 45%);
	border-radius: 1pc;

	img {
		width: 33%;
	}

	div {
		//scoreboard
		display       : flex;
		flex-direction: column;
		text-align    : center;
		padding       : 16px;
		min-width     : 100px;

		border-radius: 0.5pc;

		background: linear-gradient(#fff, #f0f0f0);

		#score {
			font-size: 2rem;
			margin   : 0;
		}

		p {
			margin: 0;
		}
	}

}

main {
	display        : flex;
	flex-direction : column;
	justify-content: space-between;
	flex-grow      : 1;
	align-items    : center;
	width          : fit-content;

	#board {
		position: relative;

		width     : min(100vw, 60vh);
		max-width : min(100vw, 70vh);
		max-height: min(100vw, 70vh);

		aspect-ratio: 1/1;

		background-size    : 60%;
		background-repeat  : no-repeat;
		background-position: center;
	}

	.item {
		position: absolute;

		&.playable:hover,
		&.playable:focus {
			transform: scale(110%);
			cursor   : pointer;
		}
	}
}

footer {

	margin-top   : 16px;
	margin-bottom: 16px;

	font-size : 11px;
	text-align: center;

	color: #fff;

	a {
		color: hsl(228, 45%, 44%);

	}
}

#rules {
	z-index: 99;
	width  : 100%;
	height : 100%;
	display: flex;
	align-items: center;
	justify-content: center;

	.inner {
		width : 90%;
		height: 90%;

		display        : flex;
		flex-direction : column;
		text-align     : center;
		justify-content: space-around;
		align-items    : center;
	}


	background-color: #fff;
	position        : fixed;
	top             : -100%;

	&.open {
		top: 0;
	}

	transition: ease-in-out 0.4s;

	svg {
		max-width: 90vw;
	}

	#closeRules {
		height: 50px;
		width : 50px;

		background-image   : url("../images/icon-close.svg");
		background-repeat  : no-repeat;
		background-position: center;
		background-size    : 50%;

		cursor: pointer;
	}

	@media (min-width:600px) {
		aspect-ratio : 1/1;
		background-color: #212121dd;
		.inner{
			width        : min(50vh, 50vw);
			height       : min(50vh, 50vw);
			border-radius: 1pc;
			background-color: #fff;
		}

		&.open {
			top      : 50%;
			transform: translateY(-50%);
		}
	}

}

#control {
	@include button-primary
}

#board {
	&.result {
		background-size: 0;
		display        : flex;
		justify-content: space-evenly;
		align-items    : center;

		max-height     : calc($item-size-selected *2);
		// aspect-ratio: unset;

		.item {
			position: unset;
			width   : $item-size-selected;
			height  : $item-size-selected;

			div {
				height: 100%;
			}
		}

		&>div:first-child::after {
			content: "YOU PICKED";
		}

		&>div:last-child::after {
			content: "HOUSE PICKED";
		}

		&>div {
			text-align: center;

			&::after {
				display   : block;
				margin-top: 20px;
				color     : #fff;
			}
		}
	}

}

#result {
	min-width : min(50vw, 300px);
	padding   : 0 0 8vh;
	text-align: center;

	>p {
		color    : #fff;
		font-size: 4rem;
		margin   : 1rem 0;
	}

	div {
		@include button-secondary;
		border-radius: 1pc;
	}
}

.item {

	max-width : 120px;
	max-height: 120px;

	border-radius: 50%;
	padding      : min(4vw, 15px);

	div {
		max-width : 120px;
		max-height: 120px;

		border-radius: 50%;

		background-color   : #fff;
		background-repeat  : no-repeat;
		background-position: center;
		background-size    : 50%;
	}

	&.rock {
		background: linear-gradient($rock-gradient);
		box-shadow: 0 8px darken($rock-colour, 16);

		div {
			background-image: url("../images/icon-rock.svg");
		}
	}

	&.paper {
		background: linear-gradient($paper-gradient);
		box-shadow: 0 8px darken($paper-colour, 16);

		div {
			background-image: url("../images/icon-paper.svg");
		}
	}

	&.scissors {
		background: linear-gradient($scissors-gradient);
		box-shadow: 0 8px darken($scissors-colour, 16);

		div {
			background-image: url("../images/icon-scissors.svg");
		}
	}

	&.lizard {
		background: linear-gradient($lizard-gradient);
		box-shadow: 0 8px darken($lizard-colour, 16);

		div {
			background-image: url("../images/icon-lizard.svg");
		}
	}

	&.spock {
		background: linear-gradient($spock-gradient);
		box-shadow: 0 8px darken($spock-colour, 16);

		div {
			background-image: url("../images/icon-spock.svg");
		}
	}
}

.mode0 {
	#board {
		background-size: default;
	}

	.select {
		background-image: url("../images/bg-triangle.svg");

		.item {
			width : $item-size-mode0;
			height: $item-size-mode0;

			div {
				width : $item-size-mode0;
				height: $item-size-mode0;
			}
		}

		.rock {
			@include absolute-center;
			top: 55%;
		}

		.paper {
			left: 10%
		}

		.scissors {
			right: 10%;
		}

		.paper,
		.scissors {
			top: 10%;
		}
	}
}

.mode1 {
	.select {
		background-image: url("../images/bg-pentagon.svg");

		.item {
			width : $item-size-mode1;
			height: $item-size-mode1;

			div {
				width : $item-size-mode1;
				height: $item-size-mode1;
			}
		}

		.rock {
			right: 15%;
		}

		.paper {
			right: 5%;
		}

		.scissors {
			@include absolute-center;
			top: 5%;
		}

		.lizard {
			left: 15%;
		}

		.spock {
			left: 5%;
		}

		.rock,
		.lizard {
			bottom: 5%;
		}

		.spock,
		.paper {
			top: 30%;
		}
	}
}

.hidden {
	display   : none;
	visibility: hidden;
	height    : 0;
	width     : 0;
	font-size : 0;
}

